Another credit reference to the indvidual contributors to the word list.

--- a/README
+++ b/README
@@ -5,6 +5,10 @@ Original Word List By:
   Morten Bo Johansen <listmail at mbjnet dk>
   Skåne Sjælland Linux User Group (bestyrelsen at sslug dk)
   Jacob Sparre Andersen (sparre at nbi dk)
+
+Also, see the file, "contributors", for all the names of indvidual
+contributors to te word list   
+
 Copyright Terms: GPLv2 (see the file Copyright for the exact terms)
 This word list is considered both complete and accurate.
 
