Aligned version to that of DSDO - 3.2

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 GNU Aspell 0.60 Danish (dansk) Dictionary Package
-Version 3.1-0
-2022-06-18
+Version 3.2
+2022-06-20
 Original Word List By:
   Morten Bo Johansen <listmail at mbjnet dk>
   Skåne Sjælland Linux User Group (bestyrelsen at sslug dk)
