--- a/README
+++ b/README
@@ -1,13 +1,13 @@
 GNU Aspell 0.60 Danish (dansk) Dictionary Package
-Version 3.2
-2022-06-20
+Version 4.0
+2022-06-22
 Original Word List By:
   Morten Bo Johansen <listmail at mbjnet dk>
   Skåne Sjælland Linux User Group (bestyrelsen at sslug dk)
   Jacob Sparre Andersen (sparre at nbi dk)
 
 Also, see the file, "contributors", for all the names of indvidual
-contributors to te word list   
+contributors to the word list   
 
 Copyright Terms: GPLv2 (see the file Copyright for the exact terms)
 This word list is considered both complete and accurate.
